--- a/static/mywebscript.css
+++ b/static/mywebscript.css
@@ -1,8 +1,17 @@
 /* Custom CSS for Emotion Detection Interface */
 
+/* styles.css */
 body {
-    background-color: #f8f9fa; /* Light gray background */
+    background-image: url('https://images.unsplash.com/photo-1554110397-9bac083977c6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2940&q=80'); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
+
 
 .container {
     max-width: 600px; /* Adjust container width as needed */
@@ -12,7 +21,9 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 20px;
     border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.9); /* Adjust the alpha value (0.0 to 1.0) for transparency */
 }
+
 
 h1 {
     font-size: 28px;
